==> draperlaboratory/hope-FreeRTOS/FreeRTOS-Plus/Source/FreeRTOS-Plus-FAT/portable/lpc18xx/ff_sddisk.c <==
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <stdio.h>
#include "chip.h"
#include "board.h"
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "portmacro.h"
#include "ff_sddisk.h"
#include "ff_sys.h"
#define sdSIGNATURE 0x41404342
#define sdIOMAN_MEM_SIZE	4096
#define sdHUNDRED_64_BIT	100ULL

static int32_t prvFFRead( uint8_t *pucBuffer, uint32_t ulSectorNumber, uint32_t ulSectorCount, FF_Disk_t *pxDisk )
{
int32_t iReturn;

	/*_RB_ Many of the comments in this file apply to other functions in the file. */

	if( ( pxDisk != NULL ) &&		/*_RB_ Could this be changed to an assert? */
		( ulSDCardStatus == 1 ) && 	/*_RB_ What does 1 mean?  It would be obvious and more maintainable as a definition [and below]*/
		( pxDisk->ulSignature == sdSIGNATURE ) &&
		( pxDisk->xStatus.bIsInitialised != 0 ) && /*_RB_ 0 was put in to prevent this being an implicit test, but what does 0 mean? */
		( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
		( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
	{

		iReturn = Chip_SDMMC_ReadBlocks( LPC_SDMMC, pucBuffer, ulSectorNumber, ulSectorCount );

		/*_RB_ I'm guessing 512 is a sector size, but that needs to be clear.
		Is it defined in a header somewhere?  If so we can do a search and
		replace in files on it as it seems to be used everywhere. */
		if( iReturn == ( ulSectorCount * 512 ) ) /*_RB_ Signed/unsigned mismatch (twice!) */
		{
			iReturn = FF_ERR_NONE;
		}
		else
		{
			/*_RB_ Signed number used to return bitmap (again below). */
			iReturn = ( FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG );
		}
	}
	else
	{
		memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512 );

		if( pxDisk->xStatus.bIsInitialised != 0 )
		{
			FreeRTOS_printf( ( "prvFFRead: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors ) );
		}

		iReturn = ( FF_ERR_IOMAN_OUT_OF_BOUNDS_READ | FF_ERRFLAG );
	}

	return iReturn;
}

static int32_t prvFFWrite( uint8_t *pucBuffer, uint32_t ulSectorNumber, uint32_t ulSectorCount, FF_Disk_t *pxDisk )
{
int32_t iReturn;

	if( ( ulSDCardStatus == 1 ) &&
		( pxDisk != NULL ) &&
		( pxDisk->ulSignature == sdSIGNATURE ) &&
		( pxDisk->xStatus.bIsInitialised != 0 ) &&
		( ulSectorNumber < pxDisk->ulNumberOfSectors ) &&
		( ( pxDisk->ulNumberOfSectors - ulSectorNumber ) >= ulSectorCount ) )
	{
		iReturn = Chip_SDMMC_WriteBlocks( LPC_SDMMC, pucBuffer, ulSectorNumber, ulSectorCount );

		if( iReturn == ( ulSectorCount * 512 ) ) /*_RB_ Signed/unsigned mismatch (twice!) */
		{
			iReturn = 0;
		}
		else
		{
			iReturn = ( FF_ERR_IOMAN_OUT_OF_BOUNDS_WRITE | FF_ERRFLAG );
		}
	}
	else
	{
		memset( ( void * ) pucBuffer, '\0', ulSectorCount * 512 );
		if( pxDisk->xStatus.bIsInitialised )
		{
			FreeRTOS_printf( ( "prvFFWrite: warning: %lu + %lu > %lu\n", ulSectorNumber, ulSectorCount, pxDisk->ulNumberOfSectors ) );
		}

		iReturn = ( FF_ERR_IOMAN_OUT_OF_BOUNDS_WRITE | FF_ERRFLAG );
	}

	return iReturn;
}

FF_Disk_t *FF_SDDiskInit( const char *pcName )
{
FF_Error_t xFFError;
int32_t	lPartitionNumber = 0;
FF_Disk_t * pxDisk;

	ulSDCardStatus = prvSDMMC_Init();
	if( ulSDCardStatus == 1 ) /*_RB_ What does 1 mean?  Can it be replaced with pdPASS? */
	{
		pxDisk = ( FF_Disk_t * ) pvPortMalloc( sizeof( *pxDisk ) );

		if( pxDisk != NULL )
		{
		FF_CreationParameters_t xParameters;

			if( xPlusFATMutex == NULL)
			{
				xPlusFATMutex = xSemaphoreCreateRecursiveMutex();
			}
			/* Initialise the created disk structure. */
			memset( pxDisk, '\0', sizeof( *pxDisk ) );
			pxDisk->ulNumberOfSectors = xCardInfo.card_info.blocknr;
			pxDisk->ulSignature = sdSIGNATURE;

			memset( &xParameters, '\0', sizeof( xParameters ) );
			xParameters.pucCacheMemory = NULL;
			xParameters.ulMemorySize = sdIOMAN_MEM_SIZE;
			xParameters.ulSectorSize = 512;
			xParameters.fnWriteBlocks = prvFFWrite;
			xParameters.fnReadBlocks = prvFFRead;
			xParameters.pxDisk = pxDisk;

			/* prvFFRead()/prvFFWrite() are not re-entrant and must be protected with
			the use of a semaphore. */
			xParameters.xBlockDeviceIsReentrant = pdFALSE;

			/* The semaphore will be uesd to protect critical sections in the +FAT driver,
			and also to avoid concurrent calls to prvFFRead()/prvFFWrite() from different tasks. */
			xParameters.pvSemaphore = ( void * ) xPlusFATMutex;

			/* Allocate an IO manager to use with the disk. */
			pxDisk->pxIOManager = FF_CreateIOManger( &xParameters, &xFFError );

			if( pxDisk->pxIOManager != NULL )
			{
				pxDisk->xStatus.bIsInitialised = pdTRUE;

				/*_RB_ Should I replace 0s with pdFAILs here? */
				if( prvSDDiskMount( pxDisk, lPartitionNumber ) == 0 )
				{
					/* The IO manager is deleted with the disk. */
					prvSDDiskDelete( pxDisk );
					pxDisk = NULL;
				}
				else
				{
					if( pcName == NULL )
					{
						pcName = "/";
					}
					FF_FS_Add( pcName, pxDisk );
				}
			}
			else
			{
				FreeRTOS_printf( ( "FF_SDDiskInit: FF_CreateIOManger: %s\n", ( const char * ) FF_GetErrMessage( xFFError ) ) );

				/* Remove compiler warnings if FreeRTOS_printf() is not
				defined. */
				( void ) xFFError;

				/* Cannot allocate the IO manager so free the disk again. */
				prvSDDiskDelete( pxDisk );
				pxDisk = NULL;
			}
		}
		else
		{
			FreeRTOS_printf( ( "FF_SDDiskInit: Malloc failed\n" ) );
		}
	}
	else
	{
		FreeRTOS_printf( ( "FF_SDDiskInit: prvSDMMC_Init failed\n" ) );
		pxDisk = NULL;
	}

	return pxDisk;
}

BaseType_t FF_SDDiskShowPartition( FF_Disk_t *pxDisk )
{
FF_Error_t Error;
uint64_t ullFreeSize, ullFreeSectors;
int32_t lPercentFree;
FF_IOManager_t *pxIOManager;
const char *pcTypeName = "unknown type";
BaseType_t xReturn;

	if( pxDisk != NULL )
	{
		pxIOManager = pxDisk->pxIOManager;
		FreeRTOS_printf( ( "Reading FAT and calculating Free Space\n" ) );

		switch( pxIOManager->xPartition.ucType )
		{
			case FF_T_FAT12:
				pcTypeName = "FAT12";
				break;

			case FF_T_FAT16:
				pcTypeName = "FAT16";
				break;

			case FF_T_FAT32:
				pcTypeName = "FAT32";
				break;
		}

		ullFreeSize = FF_GetFreeSize( pxIOManager, &Error );

		ullFreeSectors = pxIOManager->xPartition.ulFreeClusterCount * pxIOManager->xPartition.ulSectorsPerCluster;
		lPercentFree = ( int32_t ) ( ( ( sdHUNDRED_64_BIT * ullFreeSectors ) + ( pxIOManager->xPartition.ulDataSectors / 2 ) ) / pxIOManager->xPartition.ulDataSectors );

		FreeRTOS_printf( ( "Partition Nr   %8u\n", pxDisk->xStatus.bPartitionNumber ) );
		FreeRTOS_printf( ( "Type           %8u (%s)\n", pxIOManager->xPartition.ucType, pcTypeName ) );
		FreeRTOS_printf( ( "VolLabel       '%8s' \n", pxIOManager->xPartition.pcVolumeLabel ) );
		FreeRTOS_printf( ( "TotalSectors   %8lu\n", pxIOManager->xPartition.ulTotalSectors ) );
		FreeRTOS_printf( ( "Size           %8lu\n", 512U * pxIOManager->xPartition.ulDataSectors ) );
		FreeRTOS_printf( ( "FreeSize       %8lu ( %ld perc free )\n", ( uint32_t ) ullFreeSize, lPercentFree ) );

		xReturn = 1;
	}
	else
	{
		xReturn = 0;
	}

	return xReturn;
}

void SDIO_IRQHandler( void )
{
BaseType_t xHigherPriorityTaskWoken = pdFALSE;

	/* All SD based register handling is done in the callback function. The SDIO
	interrupt is not enabled as part of this driver and needs to be
	enabled/disabled in the callbacks or application as needed. This is to allow
	flexibility with IRQ handling for applications and RTOSes. */

	/* Set wait exit flag to tell wait function we are ready. In an RTOS, this
	would trigger wakeup of a thread waiting for the IRQ. */
	NVIC_DisableIRQ( SDIO_IRQn );
	xSemaphoreGiveFromISR( xSDCardSemaphore, &xHigherPriorityTaskWoken );
	lSDIOWaitExit = 1;
	portYIELD_FROM_ISR( xHigherPriorityTaskWoken );
}

static int32_t prvSDMMC_Init( void )
{
int32_t lSDCardStatus;

	if( xSDCardSemaphore == NULL )
	{
		xSDCardSemaphore = xSemaphoreCreateBinary();
		configASSERT( xSDCardSemaphore );
		xSemaphoreGive( xSDCardSemaphore );
	}

	prvInitialiseCardInfo();
	NVIC_SetPriority( SDIO_IRQn, configSD_INTERRUPT_PRIORITY );

	/*_RB_ Board_SDMMC_Init() is library specific code that is also specific to
	the target development board.The SDMMC peripheral should be initialised from
	the application code before this code is called. */
	Board_SDMMC_Init();
	Chip_SDIF_Init( LPC_SDMMC );
	lSDDetected = !Chip_SDIF_CardNDetect( LPC_SDMMC );

	Chip_SDIF_PowerOn( LPC_SDMMC );
	lSDCardStatus = Chip_SDMMC_Acquire( LPC_SDMMC, &xCardInfo );
	FreeRTOS_printf( ( "Acquire: %ld\n", lSDCardStatus ) );
	return lSDCardStatus;
}
